--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 19: Should cities abandon Masterplans?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:17</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and why their implementation is abysmal. We dig deep into the organisation complexities and structural deficiencies of the Bengaluru Masterplan as an example with explosive reveals from an insider.</p>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:39</small></span></div>
+            <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Anjali Karol Mohan</strong> discusses the flaws in the urban planning process and the need for a bottom-up approach to fix the abysmal implementation rates. She explains how the current top-down approach by the Bangalore Development Authority is inadequate and how a comprehensive development plan is necessary. She emphasizes the importance of involving stakeholders and devolving planning to the municipal level. We dig deep into the organisational complexities and structural deficiencies that plagues our cities and planning. Listen to gain insights on how to better plan cities for the future.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
