--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="text-white font-weight-light mb-2 display-4">About us</h2>
+            <h2 class="text-white font-weight-light mb-2 display-4">The OoruLabs Podcast</h2>
           </div>
         </div>
       </div>
