--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
         </div>
         <div class="nonloop-block-13 owl-carousel">
           
-          <!-- <div class="text-center p-3 p-md-5 bg-white">
+          <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/Guests/leszeksibilski.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+              <img src="images/Guests/rutholdenziel.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
-              <h3 class="font-weight-light h5">Dr Leszek Jan Sibilski</h3>
-              <p>Sociologist, Teacher and Polish National track cyclist. He made the United Nations recognise June 3rd every year as World Bicycle Day. He has won several awards from Mayors of New York City, Boston & Bill Clinton</p>
+              <h3 class="font-weight-light h5">Dr Ruth Oldenziel</h3>
+              <p>Professor in the History of Technology at Eindhoven University of Technology. With PhD at Yale she is the Editor in Chief of the Journal of Technology and Culture, Johns Hopkins University.</p>
             </div>
-          </div> -->
+          </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
@@ -238,9 +238,9 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP19-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 19: Should cities abandon Masterplans?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:39</small></span></div>
-            <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Anjali Karol Mohan</strong> discusses the flaws in the urban planning process and the need for a bottom-up approach to fix the abysmal implementation rates. She explains how the current top-down approach by the Bangalore Development Authority is inadequate and how a comprehensive development plan is necessary. She emphasizes the importance of involving stakeholders and devolving planning to the municipal level. We dig deep into the organisational complexities and structural deficiencies that plagues our cities and planning. Listen to gain insights on how to better plan cities for the future.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 19: Will the bicycle survive the future?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 17 June 2023 <span class="sep">/</span> 52:00</small></span></div>
+            <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Ruth Oldenziel</strong> discusses the future of the bicycle. Watch this space for details.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -256,10 +256,29 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
           <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 18: Should cities abandon Masterplans?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:39</small></span></div>
+            <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Anjali Karol Mohan</strong> discusses the flaws in the urban planning process and the need for a bottom-up approach to fix the abysmal implementation rates. She explains how the current top-down approach by the Bangalore Development Authority is inadequate and how a comprehensive development plan is necessary. She emphasizes the importance of involving stakeholders and devolving planning to the municipal level. We dig deep into the organisational complexities and structural deficiencies that plagues our cities and planning. Listen to gain insights on how to better plan cities for the future.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs CSEP02.png');"></div>
+          <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 18: World Bicycle Day special</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">Special podcast on the occassion of world bicycle day. Watch this space.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 02: World Bicycle Day special</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 01:02:53</small></span></div>
+            <p class="mb-4">In this Commuter Series, World Bicycle Day special episode of the OoruLabs podcast from Bengaluru, three commuters, <strong class="text-primary">Shilpi Sahu, Tandava Popuri, and Karthik Ranganathan</strong>, share their experiences of commuting to work by bicycle in Bengaluru. In a freewheeling conversation covering Individual, Corporate and Government contributions, they discuss the benefits and challenges of cycling, including road safety, the convenience of cycling, and how it can transform cities. Tune in to hear their stories and learn how cycling can be a sustainable solution to urban transportation.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
