--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 18: Should cities abandon Masterplans?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:39</small></span></div>
             <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Anjali Karol Mohan</strong> discusses the flaws in the urban planning process and the need for a bottom-up approach to fix the abysmal implementation rates. She explains how the current top-down approach by the Bangalore Development Authority is inadequate and how a comprehensive development plan is necessary. She emphasizes the importance of involving stakeholders and devolving planning to the municipal level. We dig deep into the organisational complexities and structural deficiencies that plagues our cities and planning. Listen to gain insights on how to better plan cities for the future.</p>
@@ -275,18 +275,21 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs CSEP02.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 02: World Bicycle Day special</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 01:02:53</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 01:03:25</small></span></div>
             <p class="mb-4">In this Commuter Series, World Bicycle Day special episode of the OoruLabs podcast from Bengaluru, three commuters, <strong class="text-primary">Shilpi Sahu, Tandava Popuri, and Karthik Ranganathan</strong>, share their experiences of commuting to work by bicycle in Bengaluru. In a freewheeling conversation covering Individual, Corporate and Government contributions, they discuss the benefits and challenges of cycling, including road safety, the convenience of cycling, and how it can transform cities. Tune in to hear their stories and learn how cycling can be a sustainable solution to urban transportation.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/episodes/World-Bicycle-Day-special--OoruLabs-Commuter-Series-podcast-Episode-02-e253gap" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/PkTMA-5QcNQ " class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
+              <a href="CS-EP02-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
