--- a/CS-EP02-single-post.html
+++ b/CS-EP02-single-post.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="text-white font-weight-light mb-2 display-4">Episode 02: Should cities abandon Masterplans?</h2>
+            <h2 class="text-white font-weight-light mb-2 display-4">Episode 02: World Bicycle Day special</h2>
             <div class="text-white mb-3"><span class="text-white-opacity-05"><small>Shilpi, Tandava, Karthik <span class="sep">/</span> Commuter Series <span class="sep">/</span> 03 June 2023 <span class="sep">/</span> 01:02:54</small></span></div>
           </div>
         </div>
