--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@
             <h3 class="font-weight-light"><a href="#">Episode 02: World Bicycle Day special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Commuter Series <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 01:03:25</small></span></div>
             <p class="mb-4">In this Commuter Series, World Bicycle Day special episode of the OoruLabs podcast from Bengaluru, three commuters, <strong class="text-primary">Shilpi Sahu, Tandava Popuri, and Karthik Ranganathan</strong>, share their experiences of commuting to work by bicycle in Bengaluru. In a freewheeling conversation covering Individual, Corporate and Government contributions, they discuss the benefits and challenges of cycling, including road safety, the convenience of cycling, and how it can transform cities. Tune in to hear their stories and learn how cycling can be a sustainable solution to urban transportation.</p>
-              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/episodes/World-Bicycle-Day-special--OoruLabs-Commuter-Series-podcast-Episode-02-e253gap" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/World-Bicycle-Day-special--OoruLabs-Commuter-Series-podcast-Episode-02-e253gap" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
 
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/PkTMA-5QcNQ " class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/3Exnd7eCNMFZxc7wuE4l2a?si=79fbbbbebdb84c24" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
