--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <span class="icon-youtube"></span></a>
               <a href="https://open.spotify.com/episode/3Exnd7eCNMFZxc7wuE4l2a?si=79fbbbbebdb84c24" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000615419232" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
               <a href="CS-EP02-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
