--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP19-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 19: Will the bicycle survive the future?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 17 June 2023 <span class="sep">/</span> 52:00</small></span></div>
-            <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Ruth Oldenziel</strong> discusses the future of the bicycle. Watch this space for details.</p>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 17 June 2023 <span class="sep">/</span> 50:55</small></span></div>
+            <p class="mb-4"> In this episode of the OoruLabs podcast, On this episode of the OoruLabs podcast, Sathya Sankaran and Sonal Kulkarni discuss the future of cycling as a commuting vehicle in cities with <strong class="text-primary">Professor Ruth Oldenziel</strong>. They delve into the history of the automobile industry and its impact on urban planning, as well as the factors needed for successful cycling infrastructure. Listen in to learn more about the role of cycling in sustainable transportation and the challenges faced in promoting it in different contexts.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -265,10 +265,10 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 18: Should cities abandon Masterplans?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:39</small></span></div>
             <p class="mb-4"> In this episode of the OoruLabs podcast, <strong class="text-primary">Dr. Anjali Karol Mohan</strong> discusses the flaws in the urban planning process and the need for a bottom-up approach to fix the abysmal implementation rates. She explains how the current top-down approach by the Bangalore Development Authority is inadequate and how a comprehensive development plan is necessary. She emphasizes the importance of involving stakeholders and devolving planning to the municipal level. We dig deep into the organisational complexities and structural deficiencies that plagues our cities and planning. Listen to gain insights on how to better plan cities for the future.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Should-cities-abandon-Masterplans---OoruLabs-Talking-Heads-podcast-Episode-18-e25h4fo" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -277,6 +277,8 @@
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
+              <a href="EP18-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
