--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Should-cities-abandon-Masterplans---OoruLabs-Talking-Heads-podcast-Episode-18-e25h4fo" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/hhMgngZHvjY" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/1JA7JQzZhpjUAvPFAeK6TC?si=970e5e64a88f49ed" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
               <a href="EP18-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
