--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP19-1.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP20-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 19: Will the bicycle survive the future?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 17 June 2023 <span class="sep">/</span> 50:55</small></span></div>
-            <p class="mb-4"> In this episode of the OoruLabs podcast, On this episode of the OoruLabs podcast, Sathya Sankaran and Sonal Kulkarni discuss the future of cycling as a commuting vehicle in cities with <strong class="text-primary">Professor Ruth Oldenziel</strong>. They delve into the history of the automobile industry and its impact on urban planning, as well as the factors needed for successful cycling infrastructure. Listen in to learn more about the role of cycling in sustainable transportation and the challenges faced in promoting it in different contexts.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 20: Who is a Bicycle Mayor?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 24 June 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4"> In this episode, Bicycle Mayor Network Co-ordinator from BYCS, Netherlands, Simon Alvarez Belon speaks about the change maker network for cycling that has swept across many countries. He delves into who is a Bicycle Mayor, and the impact their work has been having. Listen in if you are curious and want to join the network.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -258,6 +258,28 @@
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP19-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 19: Will the bicycle survive the future?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 17 June 2023 <span class="sep">/</span> 50:55</small></span></div>
+            <p class="mb-4"> In this episode of the OoruLabs podcast, Sathya Sankaran and Sonal Kulkarni discuss the future of cycling as a commuting vehicle in cities with <strong class="text-primary">Professor Ruth Oldenziel</strong>. They delve into the history of the automobile industry and its impact on urban planning, as well as the factors needed for successful cycling infrastructure. Listen in to learn more about the role of cycling in sustainable transportation and the challenges faced in promoting it in different contexts.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-the-bicycle-survive-the-future---OoruLabs-Talking-Heads-podcast-Episode-19-e25r68d" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="https://youtu.be/V7NS5ecTVVM" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="https://open.spotify.com/episode/3Aq0cA9KUwOyPPOfMurvhk?si=2e7c4c5beb40494a" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+              <a href="EP19-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
@@ -351,7 +373,7 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
-            <h3 class="font-weight-light"><a href="EP15-single-post.html">Episode 15: Will shared micro-mobility survive</a></h3>
+            <h3 class="font-weight-light"><a href="EP15-single-post.html">Episode 15: Will shared micro-mobility survive?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
             <p class="mb-4">In this episode of the OoruLabs podcast, CEO of Yulu, <strong class="text-primary">Amit Gupta</strong>, talks about micromobility and its potential in India. He explains how it's not just about the first and last mile, but also about short distance travel in an efficient and sustainable manner. Join us as we dive deeper into the future of mobility and how micromobility can play a crucial role in it.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-shared-micro-mobility-survive---OoruLabs-Talking-Heads-podcast-Episode-15-e2404r3" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
