--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <span class="icon-youtube"></span></a>
               <a href="https://open.spotify.com/episode/3Aq0cA9KUwOyPPOfMurvhk?si=2e7c4c5beb40494a" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000617335043" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
               <a href="EP19-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
