--- a/index.html
+++ b/index.html
@@ -244,6 +244,25 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP21-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 21: City's future inscribed on a stone</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 01 July 2023 <span class="sep">/</span> 01:26:30</small></span></div>
+            <p class="mb-4"> In this episode Udaya Kumar PL walks us through how the contemporary city was before you knew it, all documented on stones. These inscription stones can help enrich our understanding of how cities evolve and how the governed and the governors move the trajectory of how we got here and where we went. These stones tell us everything from governance, language, finance, science to astronomy.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP20-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
