--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h2 class="text-white font-weight-light mb-2 display-4">Your weekly soapbox for</h2>
             <h2 class="text-white font-weight-light mb-2 display-4">Urban Sustainability</h2>
-            <div class="text-white mb-4"><span class="text-white-opacity-05"><small>By Sathya Sankaran & Knerav Kodolikar</small></span></div>
+            <div class="text-white mb-4">
+              <span class="text-white-opacity-05">
+                <small>
+                  Sathya Sankaran <br> with co-hosts <br> Knerav Kodolikar & Sonal Kulkarni
+                </small>
+              </span></div>
                 <h3 class="footer-heading mb-4">Subscribe to the channel</h3>
                 <div>
                   <a href="https://www.youtube.com/@oorulabs" class="pl-0 pr-3 text-white" style="font-size: 50px;" target="_blank">
