--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <small>
                   Sathya Sankaran <br> with co-hosts <br> Knerav Kodolikar & Sonal Kulkarni
                 </small>
-              </span></div>
+              </span>
+            </div>
                 <h3 class="footer-heading mb-4">Subscribe to the channel</h3>
                 <div>
                   <a href="https://www.youtube.com/@oorulabs" class="pl-0 pr-3 text-white" style="font-size: 50px;" target="_blank">
