--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP21-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 21: City's future inscribed on a stone</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 01 July 2023 <span class="sep">/</span> 01:26:30</small></span></div>
             <p class="mb-4"> In this episode Udaya Kumar PL walks us through how the contemporary city was before you knew it, all documented on stones. These inscription stones can help enrich our understanding of how cities evolve and how the governed and the governors move the trajectory of how we got here and where we went. These stones tell us everything from governance, language, finance, science to astronomy.</p>
@@ -290,17 +290,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP20-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 20: Who is a Bicycle Mayor?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 24 June 2023 <span class="sep">/</span> 47:05</small></span></div>
             <p class="mb-4"> In this episode, Bicycle Mayor Network Co-ordinator from BYCS, Netherlands, Simon Alvarez Belon speaks about the change maker network for cycling that has swept across many countries. He delves into who is a Bicycle Mayor, and the impact their work has been having. Listen in if you are curious and want to join the network.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Who-is-a-Bicycle-Mayor---OoruLabs-Talking-Heads-podcast-Episode-20-e264csp" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/d_dAkE6MLXA" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/1ftLsFCaXmReJvM2HUEOTU?si=fc3d6817af4e4994" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000618155019" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
