--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 20: Who is a Bicycle Mayor?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 24 June 2023 <span class="sep">/</span> 47:05</small></span></div>
             <p class="mb-4"> In this episode, Bicycle Mayor Network Co-ordinator from BYCS, Netherlands, Simon Alvarez Belon speaks about the change maker network for cycling that has swept across many countries. He delves into who is a Bicycle Mayor, and the impact their work has been having. Listen in if you are curious and want to join the network.</p>
-              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Who-is-a-Bicycle-Mayor---OoruLabs-Talking-Heads-podcast-Episode-20-e264csp" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Who-is-a-Bicycle-Mayor---OoruLabs-Talking-Heads-podcast-Episode-20-e264csp" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/d_dAkE6MLXA" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
