--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/zenrainman.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Vishwanath S</h3>
+              <p>AKA Zenrainman, he has been the guru on water for over four decades. Beyond helping people with water sustainability measures he has been an mentor and a teacher for many in the city.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/shreyagadepalli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -249,6 +259,25 @@
           </div>
         </div>
         
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP23-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 23: How to stop cities from drowning</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 15 July 2023 <span class="sep">/</span> 51:39</small></span></div>
+            <p class="mb-4"> In this episode S Vishwanath aka Zenrainman highlights the gaps in our existing water management and governance and suggests the way forward so we dont water log the streets every monsoon.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP22-1.png');"></div>
           <div class="text">
