--- a/index.html
+++ b/index.html
@@ -156,6 +156,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/ravichandarv.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Ravichandar V</h3>
+              <p>Urban and Civic evangelist, Member Bengaluru Restructuring Committee, Designer of the Bengaluru property tax Self Assessment Scheme, Evangelist JNNURM.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/anjalikmohan.png" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -260,9 +270,28 @@
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP23-1.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP24-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 24: Should Bengaluru be split?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">In this episode Ravichandar V of the Bengaluru restructuring committee discusses the costs and benefits of splitting the city into many parts.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP23-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 23: How to stop cities from drowning</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 15 July 2023 <span class="sep">/</span> 51:39</small></span></div>
             <p class="mb-4"> In this episode S Vishwanath aka Zenrainman highlights the gaps in our existing water management and governance and suggests the way forward so we dont water log the streets every monsoon.</p>
@@ -281,15 +310,15 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP22-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 22: China controlling Indian EV market?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 08 July 2023 <span class="sep">/</span> 54:00</small></span></div>
-            <p class="mb-4"> In this episode Vivek Sharanappa addresses the challenges in the Indian market for innovators making Electric Vehicles. How much control China still has and the frictions entreprenuers face when embarking on making products in this market.</p>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 08 July 2023 <span class="sep">/</span> 50:54</small></span></div>
+            <p class="mb-4"> How do we get out of the Chinese stranglehold on the Indian EV market? What does it take for innovators in the EV space to succeed? This and more from Vivek Sharanappa of BuyMyEV a startup making electric two wheelers. </p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/China-controlling-Indian-EV-market---OoruLabs-Talking-Heads-podcast-Episode-22-e26mloa" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/ZKFbNo6kFfo" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/4BuZ5tuS5fDOii3N3xyH99?si=0a4135a1562945bf" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
@@ -301,7 +330,7 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP21-1.png');"></div>
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 21: City's future inscribed on a stone</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 01 July 2023 <span class="sep">/</span> 01:26:30</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 01 July 2023 <span class="sep">/</span> 01:26:09</small></span></div>
             <p class="mb-4"> In this episode Udaya Kumar PL walks us through how the contemporary city was before you knew it, all documented on stones. These inscription stones can help enrich our understanding of how cities evolve and how the governed and the governors move the trajectory of how we got here and where we could go. These stones tell us everything from governance, language, finance, science to astronomy.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Citys-future-inscribed-on-a-stone--OoruLabs-Talking-Heads-podcast-Episode-21-e26dm73" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
