--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 22: China controlling Indian EV market?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 08 July 2023 <span class="sep">/</span> 50:54</small></span></div>
-            <p class="mb-4"> How do we get out of the Chinese stranglehold on the Indian EV market? What does it take for innovators in the EV space to succeed? This and more from Vivek Sharanappa of BuyMyEV a startup making electric two wheelers. </p>
+            <p class="mb-4"> How do we get out of the Chinese stranglehold on the Indian EV market? What does it take for innovators in the EV space to succeed? What are the frictions in the space that suppliers can solve for the OEM’s? This and more from Vivek Sharanappa of BuyMyEV a startup making electric two wheelers. </p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/China-controlling-Indian-EV-market---OoruLabs-Talking-Heads-podcast-Episode-22-e26mloa" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -320,7 +320,7 @@
                 <span class="icon-youtube"></span></a>
               <a href="https://open.spotify.com/episode/4BuZ5tuS5fDOii3N3xyH99?si=0a4135a1562945bf" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000619984730" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
