--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 24: Should Bengaluru be split?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">In this episode Ravichandar V of the Bengaluru restructuring committee discusses the costs and benefits of splitting the city into many parts.</p>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 01:03:00</small></span></div>
+            <p class="mb-4">In this episode Ravichandar V of the Bengaluru Restructuring Committee discusses the costs and benefits of splitting the city into many parts. How the Bengaluru governance bill and the many strategies can deliver outcomes for citizens in the city.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
