--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP24-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <!-- <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 24: Should Bengaluru be split?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 22 July 2023 <span class="sep">/</span> 01:01:58</small></span></div>
             <p class="mb-4">In this episode Ravichandar V of the Bengaluru Restructuring Committee discusses the costs and benefits of splitting the city into many parts. How the Bengaluru governance bill and the many strategies can deliver outcomes for citizens in the city.</p>
@@ -291,17 +292,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP23-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 23: How to stop cities from drowning</a></h3>
+            <h3 class="font-weight-light"><a href="#">Episode 23: How to stop cities from drowning?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 15 July 2023 <span class="sep">/</span> 51:39</small></span></div>
-            <p class="mb-4"> In this episode S Vishwanath aka Zenrainman highlights the gaps in our existing water management and governance and suggests the way forward so we dont water log the streets every monsoon.</p>
+            <p class="mb-4"> Cities are drowning all across the country. In this episode, S Vishwanath, Popularly known as Zenrainman, tells us why. How do we stop this deluge? He lays bare the gaps in our existing water management and governance strategy. Listen in to find out more. </p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-to-stop-cities-from-drowning---OoruLabs-Talking-Heads-podcast-Episode-23-e26v8ii" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/ETRTI9pW-M4" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/57v3sjTVjImG5QkVnRWAck?si=6855e1731a8e4186" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000621209650" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
