--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 23: How to stop cities from drowning?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 15 July 2023 <span class="sep">/</span> 51:39</small></span></div>
             <p class="mb-4"> Cities are drowning all across the country. In this episode, S Vishwanath, Popularly known as Zenrainman, tells us why. How do we stop this deluge? He lays bare the gaps in our existing water management and governance strategy. Listen in to find out more. </p>
-              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-to-stop-cities-from-drowning---OoruLabs-Talking-Heads-podcast-Episode-23-e26v8ii" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/How-to-stop-cities-from-drowning---OoruLabs-Talking-Heads-podcast-Episode-23-e26v8ii" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/ETRTI9pW-M4" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
